# serializer version: 1
# name: test_clean_old_archives[logs]
  list([
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Connected SFTP server',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] sftp session closed.',
      'module': 'sftp',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 1] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Connected SFTP server',
      'module': 'import_ea_eatt',
    }),
    dict({
      'file': 'FLUX_EA2_ITOU_20240802.zip',
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Going to delete the old archive',
      'module': 'import_ea_eatt',
    }),
    dict({
      'file': 'FLUX_EA2_ITOU_20240802.zip',
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Old archive was deleted',
      'module': 'import_ea_eatt',
    }),
    dict({
      'file': 'FLUX_EA2_ITOU_20240801.zip',
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Going to delete the old archive',
      'module': 'import_ea_eatt',
    }),
    dict({
      'file': 'FLUX_EA2_ITOU_20240801.zip',
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Old archive was deleted',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 1] sftp session closed.',
      'module': 'sftp',
    }),
  ])
# ---
# name: test_clean_old_archives_dry_run[logs]
  list([
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Connected SFTP server',
      'module': 'import_ea_eatt',
    }),
    dict({
      'file': 'filename_of_monday.zip',
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Going to delete the old archive',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] sftp session closed.',
      'module': 'sftp',
    }),
  ])
# ---
# name: test_process_file_from_archive[data]
  list([
    tuple(
      'EA',
      '00000000000001',
      'EA_EATT',
      'Dumas Sa',
      '',
      'legerdenise@example.org',
      '1 Rue DE LA MOTTE',
      '',
      '77550',
      None,
      '',
      '77',
      None,
    ),
    tuple(
      'EATT',
      '00000000000001',
      'EA_EATT',
      'Collet Sarl',
      '',
      'legerdenise@example.org',
      '1 Rue DE LA MOTTE',
      '',
      '77550',
      None,
      '',
      '77',
      None,
    ),
  ])
# ---
# name: test_process_file_from_archive[logs]
  list([
    dict({
      'count': 4,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows in file',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 3,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows after kind filter',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 2,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows after deduplication',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 2,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows used',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 2,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows used with a SIRET',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 0,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows used with an empty email',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 1,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows creatable',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 2,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows created',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 0,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows updatable',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 0,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows updated',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 0,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows deletable',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 0,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows deleted',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 0,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows undeletable',
      'module': 'import_ea_eatt',
    }),
    dict({
      'count': 0,
      'funcName': 'process_file',
      'levelno': 20,
      'message': 'Rows deletable skipped',
      'module': 'import_ea_eatt',
    }),
  ])
# ---
# name: test_retrieve_archive_of_the_week[logs]
  list([
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'retrieve_archive_of_the_week',
      'host': '0.0.0.0',
      'levelno': 20,
      'message': 'Connected SFTP server',
      'module': 'import_ea_eatt',
      'remote_dir': '/',
      'user': 'django_tests',
    }),
    dict({
      'files': list([
        'FLUX_EA2_ITOU_monday.zip',
      ]),
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': 'Files matching for this monday',
      'module': 'import_ea_eatt',
      'monday': 'monday',
    }),
    dict({
      'file': 'FLUX_EA2_ITOU_monday.zip',
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': 'Found the archive of the week',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] sftp session closed.',
      'module': 'sftp',
    }),
  ])
# ---
# name: test_retrieve_archive_of_the_week_errors[logs]
  list([
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'retrieve_archive_of_the_week',
      'host': '0.0.0.0',
      'levelno': 20,
      'message': 'Connected SFTP server',
      'module': 'import_ea_eatt',
      'remote_dir': '/',
      'user': 'django_tests',
    }),
    dict({
      'files': list([
      ]),
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': 'Files matching for this monday',
      'module': 'import_ea_eatt',
      'monday': 'monday',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] sftp session closed.',
      'module': 'sftp',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 1] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'retrieve_archive_of_the_week',
      'host': '0.0.0.0',
      'levelno': 20,
      'message': 'Connected SFTP server',
      'module': 'import_ea_eatt',
      'remote_dir': '/',
      'user': 'django_tests',
    }),
    dict({
      'files': list([
      ]),
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': 'Files matching for this monday',
      'module': 'import_ea_eatt',
      'monday': 'monday',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 1] sftp session closed.',
      'module': 'sftp',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 2] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'retrieve_archive_of_the_week',
      'host': '0.0.0.0',
      'levelno': 20,
      'message': 'Connected SFTP server',
      'module': 'import_ea_eatt',
      'remote_dir': '/',
      'user': 'django_tests',
    }),
    dict({
      'files': list([
        'FLUX_EA2_ITOU_monday.zip',
      ]),
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': 'Files matching for this monday',
      'module': 'import_ea_eatt',
      'monday': 'monday',
    }),
    dict({
      'file': 'FLUX_EA2_ITOU_monday.zip',
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': 'Found the archive of the week',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 2] sftp session closed.',
      'module': 'sftp',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 3] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'retrieve_archive_of_the_week',
      'host': '0.0.0.0',
      'levelno': 20,
      'message': 'Connected SFTP server',
      'module': 'import_ea_eatt',
      'remote_dir': '/',
      'user': 'django_tests',
    }),
    dict({
      'files': list([
        'FLUX_EA2_ITOU_20250415.zip',
        'FLUX_EA2_ITOU_monday.zip',
      ]),
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': 'Files matching for this monday',
      'module': 'import_ea_eatt',
      'monday': 'monday',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 3] sftp session closed.',
      'module': 'sftp',
    }),
  ])
# ---
